# zervi-junior-ai-assessment

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: TASKS-ROADMAP.md  TASKS-chat-bonus.md  TASKS-web-phase.md  TASKS.md
src/ai_assistant/: __init__.py  auth.py  chat_session.py  cli.py  config.py  database.py  llm_client.py  memory.py  web.py
src/ai_assistant/skills/: __init__.py  base.py  echo.py  greet.py  registry.py
src/ai_assistant/static/: style.css
src/ai_assistant/templates/: chat.html
tests/: test_auth.py  test_chat_session.py  test_cli.py  test_database.py  test_llm_client.py  test_memory.py  test_skills.py  test_web.py
